--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -6,12 +6,9 @@
 	  @import "html_print.css";
 	</style>
   </head>
-  <body><h1 class="title">
-          Sex, death and sonnets
-          Musings of a software developer
-        </h1><p class="author">Sigfrid Lundberg<br/>slu@kb.dk<br/>Digital Transformation<br/>Royal Danish Library<br/>Post box 2149<br/>1016 Copenhagen K<br/>Denmark<br/></p><blockquote class="abstract"><h3>Abstract</h3>
+  <body><h1 class="title">Sex, death and sonnets<br/>Musings of a software developer</h1><p class="author">Sigfrid Lundberg<br/>slu@kb.dk<br/>Digital Transformation<br/>Royal Danish Library<br/>Post box 2149<br/>1016 Copenhagen K<br/>Denmark<br/></p><blockquote class="abstract"><h3>Abstract</h3>
 	<p>This note discusses how software can recognize sonnets, by
-	analysis of length, strophe structure and number of syllables
+	analysis of text length, strophe structure and number of syllables
 	per line. It also makes a simple content analysis based on
 	word frequency analyses.</p>
         <p>The results clearly shows that simple Unix for Poets
@@ -22,12 +19,11 @@
 
         <p>If there are any sonnets, do they rhyme and what are they about?</p>
 
-        <p>I have since many years been a great fan of Kenneth Ward Church's
-        tutorial ["Unix for
-        Poets"](https://web.stanford.edu/class/cs124/kwc-unix-for-poets.pdf). This
-        is an investigation of what can be done with a corpus of
-        literary text with very simple tools similar to the ones described by
-        Church in his tutorial.</p>
+        <p>I have since many years been a great fan of <a href="#kennethchurch">Kenneth Ward Church's</a> tutorial
+        <em>Unixࡊ for Poets</em>. This is an investigation of
+        what can be done with a corpus of literary text with very
+        simple tools similar to the ones described by Church in his
+        tutorial.</p>
 
         <p>I do not claim that there is anything novel or even significant in
         this text. Being a scientist, I think like a scientist and don't
@@ -550,9 +546,9 @@
       
       
         <h2>References</h2>
-        <p id=""><span class="biblAuthor">Church, Kenneth Ward</span>,
-      publication date unknown.
-      </p><p id=""><span class="biblAuthor">Michaëlis, Sophus</span>,
+        <p id="kennethchurch"><span class="biblAuthor">Church, Kenneth Ward</span>,
+      [publication date unknown].
+      <em>Unixࡊ for Poets</em>. </p><p id=""><span class="biblAuthor">Michaëlis, Sophus</span>,
       1883.
       Jeg elsker —”, . <br/><small>Titelvignet af Frode Eskesen, Gyldendal, 1893, s. 151. Onlineudgave fra Arkiv for Dansk Litteratur.</small><br/></p><p id=""> </p><p id=""><span class="biblAuthor">The TEI Consortium</span>,
       2022.
