improved <bibl>....</bibl>

--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -625,11 +625,11 @@
         <h2>References</h2>
         <p id="kennethchurch"><span class="biblAuthor">Church, Kenneth Ward</span>,
       [publication date unknown].
-      In: <em>Unix™ for Poets</em>. 
+      <em>Unix™ for Poets</em>. 
     &lt;URL:<a href="https://web.stanford.edu/class/cs124/kwc-unix-for-poets.pdf">https://web.stanford.edu/class/cs124/kwc-unix-for-poets.pdf</a>&gt;
   </p><p id="adlcorpus"><span class="biblAuthor">Det Kgl. Bibliotek</span>,  and <span class="biblAuthor">Det Danske Sprog- og Litteraturselskab</span>,
       2000 - 2022.
-      In: <em>The ADL text corpus</em>. 
+      <em>The ADL text corpus</em>. 
     &lt;URL:<a href="https://github.com/kb-dk/public-adl-text-sources">https://github.com/kb-dk/public-adl-text-sources"</a>&gt;
   </p><p id="everysonnet"><span class="biblAuthor">Eberhart, Larry</span>,
       2018.
@@ -645,7 +645,7 @@
     &lt;URL:<a href="https://en.wikipedia.org/wiki/Sonnet">https://en.wikipedia.org/wiki/Sonnet</a>&gt;
   </p><p id="teiguidelines"><span class="biblAuthor">The TEI Consortium</span>,
       2022.
-      In: <em>TEI P5: Guidelines for Electronic Text Encoding and Interchange</em>. 
+      <em>TEI P5: Guidelines for Electronic Text Encoding and Interchange</em>. 
     &lt;URL:<a href="https://tei-c.org/release/doc/tei-p5-doc/en/html/index.html">https://tei-c.org/release/doc/tei-p5-doc/en/html/index.html</a>&gt;
   </p><p id="tei-ref-lg"><span class="biblAuthor">The TEI Consortium</span>,
       2022.
