--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -611,9 +611,12 @@
 
         <h2>Conclusions</h2>
 
-        <p>I think I could go on studying this for quite some time. However, I have to
-        conclude this here, before the actual conclusions. There are
-        interesting things to find here, though. Some of them are possible to study using simple methods, such as those described by Kenneth Ward Church in ["Unix for Poets"](https://web.stanford.edu/class/cs124/kwc-unix-for-poets.pdf).</p>
+        <p>I think I could go on studying this for quite some
+        time. However, I have to conclude this here, before the actual
+        conclusions. There are interesting things to find here,
+        though. Some of them are possible to study using simple
+        methods, such as those described by Kenneth Ward Church in his 
+        <em><a href="#kennethchurch"> Unix™ for Poets</a></em>.</p>
 
         <p>The preliminary result from my armchair text processing exercise supports the
         notion that life was already in early modern Europe about sex, death
