--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -523,7 +523,10 @@
         prepositions and the like). The distribution of the number of sonnets
         the words appear in:</p>
 
-        <p>![Distribution](distro.png)</p>
+        <div id="">
+          <img src="distro.png"/>
+         </div>
+
 
         <p>There is just one word appearing in all 160 sonnets. It is 'og' meaning
         'and'. Then there are 3304 words occurring in just one sonnet. The
