more typos and apos problems

--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -413,7 +413,7 @@
 
         <p>The rhyme structure abbaabbacdecde is one is the most
         common ones found.  Also it is one of the socalled Petrarchan
-        rhyme schemes (<a href="everysonnet">Eberhart,
+        rhyme schemes (<a href="#everysonnet">Eberhart,
         2018</a>).</p>
 
       
