explanation to table column headings

--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -204,8 +204,8 @@
         <table>
           <h2>sonnet candidates</h2>
           <tr> 
-            <th>File name</th>
-            <th>Title</th>
+            <th>File name (link to source)</th>
+            <th>Title (link to view)</th>
             <th>xml:id</th>
             <th>metadata reference</th>
             <th>Strophe structure</th>
@@ -465,8 +465,8 @@
 
         <p>There are 160 sonnets in the selection, and the most
         frequent word occurs in all of them. These are the fifteen most
-        commont word a measured by the [number of sonnets they occur
-        in](poem_frequencies.text). Number of poems in the left column.</p>
+        commont word a measured by the <a href="poem_frequencies.text">number of sonnets they occur
+        in</a>. Number of poems in the left column.</p>
 
         <pre> 
         75 du
@@ -487,8 +487,8 @@
         </pre>
 
         <p>and this is the list of the same thing, but measured as the grand
-        total [occurrence of the words in the
-        corpus](frequencies.text). Number of words in corpus in left column.</p>
+        total <a href="frequencies.text">occurrence of the words in the
+        corpus</a>. Number of words in corpus in left column.</p>
 
         <pre> 
         109 min
@@ -521,8 +521,8 @@
 
         <p>There is just one word appearing in all 160 sonnets. It is 'og' meaning
         'and'. Then there are 3304 words occurring in just one sonnet. The
-        [distribution.text](distribution.text) is generated from
-        [poem_frequencies.text](poem_frequencies.text) using</p>
+        <a href="distribution.text">distribution.text</a> is generated from
+        <a href="poem_frequencies.text">poem_frequencies.text</a> using</p>
 
         <pre> 
         sed 's/\ [a-z]*$//' poem_frequencies.text | sort | uniq -c | sort -n -k 2 &gt; distribution.text
@@ -624,7 +624,7 @@
       
         <h2>References</h2>
         <p id="kennethchurch"><span class="biblAuthor">Church, Kenneth Ward</span>,
-      [publication date unknown].
+      [date unknown].
       <em>Unix™ for Poets</em>. 
     &lt;URL:<a href="https://web.stanford.edu/class/cs124/kwc-unix-for-poets.pdf">https://web.stanford.edu/class/cs124/kwc-unix-for-poets.pdf</a>&gt;
   </p><p id="adlcorpus"><span class="biblAuthor">Det Kgl. Bibliotek</span>,  and <span class="biblAuthor">Det Danske Sprog- og Litteraturselskab</span>,
