embedding css into html doc

--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+    <base href="https://github.com/siglun/danish-sonnets/blob/main/"/>
     <title>Sex, death and sonnetsMusings of a software developer</title>
-    <style type="text/css" media="all">
-	  @import "html_print.css";
-	</style>
+    <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="html_print_css.xml"/>
   </head>
   <body><h1 class="title">Sex, death and sonnets<br/>Musings of a software developer</h1><p class="author">Sigfrid Lundberg<br/>slu@kb.dk<br/>Digital Transformation<br/>Royal Danish Library<br/>Post box 2149<br/>1016 Copenhagen K<br/>Denmark<br/></p><blockquote class="abstract"><h3>Abstract</h3>
 	<p>This note discusses how software can recognize sonnets, by
@@ -519,7 +518,7 @@
         the words appear in:</p>
 
         <div id="">
-          <img src="distro.png"/>
+          <img src="https://github.com/siglun/danish-sonnets/raw/main/distro.png"/>
          </div>
 
 
