google chrome does not like sonnet-analysis.xml

--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
    <head>
       <title>Sex, death and sonnetsMusings of a software developer</title>
-      <style xmlns="" type="text/css" media="all">
+      <style type="text/css" media="all">
 body {
     color: black;
     font-family: serif;
