--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -739,7 +739,7 @@ p.version {
 
         <p>There are 160 sonnets in the selection, and the most
         frequent word occurs in all of them. These are the fifteen most
-        commont word a measured by the <a href="https://github.com/siglun/danish-sonnets/blob/main/poem_frequencies.text">number of sonnets they occur
+        commont word measured by the <a href="https://github.com/siglun/danish-sonnets/blob/main/poem_frequencies.text">number of sonnets they occur
         in</a>. Number of poems in the left column.</p>
 
         <pre> 
@@ -794,11 +794,14 @@ p.version {
 
         <p>The distribution shows number of words graphed against
         number of sonnets.  There are 3304 words occurring in just one
-        sonnet. The leftmost, and highest, point on the graph has the coordinate (1,3304).</p>
+        sonnet. The leftmost, and highest, point on the graph has the
+        coordinate (1,3304).</p>
          
         <p>There is just one word appearing in all 160 sonnets. It is
         'og' meaning 'and' correspoding to the rightmost point on the
-        graph which has the coordinate (160,1).</p>
+        graph which has the coordinate (160,1). As a rule of thumb the
+        most common words are all conjunctions, next to them comes
+        prepositions and after those come pronomina.</p>
 
         <p>The <a href="https://github.com/siglun/danish-sonnets/blob/main/distribution.text">distribution.text</a>
         is generated from <a href="https://github.com/siglun/danish-sonnets/blob/main/poem_frequencies.text">poem_frequencies.text</a>
@@ -814,8 +817,12 @@ p.version {
         25% of the sonnets, or less. I.e., words occuring in 40
         sonnets, or fewer.</p>
 
+        <p>In what follows, I have simply used the utility <kbd>grep</kbd> find words and derivates in the
+        file <a href="https://github.com/siglun/danish-sonnets/blob/main/poem_frequencies.text">poem_frequencies.text</a>
+        mentioned above.</p>
+
         <p>As example we have death, dead and lethal etc (basically
-        words containing <strong>død</strong>) in a number of
+        words containing <em>død</em>) in a number of
         sonnets. In the left column the number of sonnets containing
         the word. These appear in about 7% of the sonnets.</p>
 
@@ -835,7 +842,15 @@ p.version {
         11 døde
         </pre>
 
-        <p>Love (elskov) is not as popular as death (about 5% of the sonnets).</p>
+        <p>There are interesting derivatives and compound words on the
+        list. Like <em>dødsberedthed</em> meaning
+        preparedness for death and <em>glemselsdøden</em>. Looking up the word in the
+        corpus I believe it refers to the death or disappearance due
+        to the disappearance of the traces or memories of someone who
+        has been in earlier generations.</p>
+
+        <p>Love (elskov) is not as popular as death (about 5% of the
+        sonnets).</p>
 
         <pre> 
         1 elskoven
@@ -846,7 +861,11 @@ p.version {
         7 elskov
         </pre>
 
-        <p>women (kvinde) are not as popular as love</p>
+        <p>
+         <em>elskovsild</em> means the fire of
+        love. <em>elskovsbrev</em> has to be love
+        letter. <em>women (kvinde)</em> are not as
+        popular as love</p>
 
         <pre> 
         1 dobbeltkvinde
