--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -426,8 +426,8 @@ p.version {
         poem. Finally we divide that sum with 14 and get the average
         number of vowels per line.</p>
 
-        <p>For a sonnet it would be about 10, <a href="#hendecasyllable">or occasionally a little
-        more</a>. In the Michaëlis poem quoted above it is 10.4.</p>
+        <p>For a sonnet it would be about 10, <a href="#hendecasyllable">or occasionally a little more</a>.
+        In the Michaëlis poem quoted above it is 10.4.</p>
 
       
 
@@ -435,17 +435,13 @@ p.version {
 
         <h2>Strophe structure</h2>
 
-        <p>You can write a lot of nice poetry with 14 lines. Like
-        Gustaf Munch-Petersen's <a href="https://tekster.kb.dk/text/adl-texts-munp1-shoot-workid62017">en
-        borgers livshymne</a> with one strophe with one line, then
-        three strophes with four lines and finally a single line. The
-        number of syllables per line seem to decrease towards the
-        end. Gustaf was a modernist. There are no fixed structures and
-        very few rhymes i his poetry.</p>
+        <p>You can write a lot of nice poetry with 14 lines.
+        Like Gustaf Munch-Petersen's <a href="https://tekster.kb.dk/text/adl-texts-munp1-shoot-workid62017">en borgers livshymne</a> with one strophe with one line,
+        then three strophes with four lines and finally a single line.
+        The number of syllables per line seem to decrease towards the end.
+        Gustaf was a modernist. There are no fixed structures and very few rhymes i his poetry.</p>
 
         <p>You can easily find out the strophe structure for each poem:</p>
-
-
         <pre> 
         &lt;xsl:variable name="lines_per_strophe" as="xs:integer *"&gt;
            &lt;xsl:for-each select=".//t:lg[t:l]"&gt;
@@ -593,8 +589,7 @@ p.version {
         rhyme structure. So an approximate idea of the rhymes could be have
         comparing the verse line endings.</p>
 
-        <p>This is error prone, though. Consider this <a href="https://tekster.kb.dk/text/adl-texts-moeller01val-shoot-workid62307">sonnet
-        by P.M. Møller</a>.</p>
+        <p>This is error prone, though. Consider this <a href="https://tekster.kb.dk/text/adl-texts-moeller01val-shoot-workid62307">sonnet by P.M. Møller</a>.</p>
 
         <div id="">
 
@@ -687,8 +682,7 @@ p.version {
 
         <p>The rhyme structure abbaabbacdecde is one is the most
         common ones found.  Also it is one of the socalled Petrarchan
-        rhyme schemes (<a href="#everysonnet">Eberhart,
-        2018</a>).</p>
+        rhyme schemes (<a href="#everysonnet">Eberhart, 2018</a>).</p>
 
       
 
