--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -274,11 +274,9 @@ p.version {
 
         <p>If there are any sonnets, do they rhyme and what are they about?</p>
 
-        <p>I have since many years been a great fan of <a href="#kennethchurch">Kenneth Ward Church's</a> tutorial
-        <em>Unix™ for Poets</em>. This is an investigation of
-        what can be done with a corpus of literary text with very
-        simple tools similar to the ones described by Church in his
-        tutorial.</p>
+        <p>I have since many years been a great fan of the tutorial by <a href="#kennethchurch">Kenneth Ward Church</a> 
+         <em>Unix™ for Poets</em>.
+        This is an investigation of what can be done with a corpus of literary text with very simple tools similar to the ones described by Church in his tutorial.</p>
 
         <p>I do not claim that there is anything novel or even significant in
         this text. Being a scientist, I think like a scientist and don't
