device pdf works with distro.pdf

--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -452,8 +452,8 @@ p.version {
         lines. There are 243 of them (there are more, but they may have erroneous
         markup).</p>
 
-        <p>You find these sonnet candidates in a table here <a href="https://github.com/siglun/danish-sonnets/blob/main/sonnet_candidates.xml">sonnet_candidates.xml</a>. Please,
-        find an extract from it below.</p>
+        <p>You find these sonnet candidates in a table here <a href="https://github.com/siglun/danish-sonnets/blob/main/sonnet_candidates.xml">sonnet_candidates.xml</a>.
+        Please, find an extract from it below.</p>
 
         <table>
           <h2>sonnet candidates</h2>
@@ -630,12 +630,13 @@ p.version {
         not 'aaaaaaaa'. Furthermore, it continues 'cdedec'.</p>
 
         <p>I have written a set of scripts that traverse the
-        <a href="https://github.com/siglun/danish-sonnets/blob/main/sonnet_candidates.xml">sonnet_candidates.xml</a> table. Transform that
-        file using <a href="https://github.com/siglun/danish-sonnets/blob/main/iterate_the_rhyming.xsl">iterate_the_rhyming.xsl</a> selects
-        poems with 14 lines and strophe structure 4 4 3 3. It generates a
-        shell script which when executed pipes the content through other
-        scripts that retrieve content, remove punctuation and finally detags
-        them. The actual text is then piped through a perl script that
+        <a href="https://github.com/siglun/danish-sonnets/blob/main/sonnet_candidates.xml">sonnet_candidates.xml</a>
+        table.
+        Transform that file using <a href="https://github.com/siglun/danish-sonnets/blob/main/iterate_the_rhyming.xsl">iterate_the_rhyming.xsl</a>
+        selects poems with 14 lines and strophe structure 4 4 3 3.
+        It generates a shell script which when executed pipes the content through other scripts that retrieve content,
+        remove punctuation and finally detags them.
+        The actual text is then piped through a perl script that
         analyse the endings according to the silly and flawed method described
         above.</p>
 
