--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -686,7 +686,7 @@ p.version {
         sonnet. The leftmost, and highest, point on the graph has the
         coordinate (1,3304).</p>
       <p>There is just one word appearing in all 160 sonnets. It is
-        'og' meaning 'and' correspoding to the rightmost point on the
+        'og' meaning 'and' corresponding to the rightmost point on the
         graph which has the coordinate (160,1). As a rule of thumb the
         most common words are all conjunctions, next to them comes
         prepositions and after those come pronomina.</p>
