half way through

--- a/sonnet-analysis.html
+++ b/sonnet-analysis.html
@@ -258,7 +258,7 @@ p.version {
    </head>
    <body>
       <h1 class="title">Sex, death and sonnets<br/>Musings of a software developer</h1>
-      <p class="author">Sigfrid Lundberg<br/>slu@kb.dk<br/>Digital Transformation<br/>Royal Danish Library<br/>Post box 2149<br/>1016 Copenhagen K<br/>Denmark<br/>
+      <p class="author">Sigfrid Lundberg<br/>Royal Danish Library<br/>Post box 2149<br/>1016 Copenhagen K<br/>Denmark<br/>
       </p>
       <blockquote class="abstract">
          <h3>Abstract</h3>
@@ -384,7 +384,7 @@ p.version {
         poem. Finally we divide that sum with 14 and get the average
         number of vowels per line.</p>
       <p>For a sonnet it would be about 10,
-        <a href="#hendecasyllable">or occasionally a little more.</a>
+	or occasionally a little more <a href="#hendecasyllabic">#hendecasyllabic</a>.
         Danish is a language rich in diftons,
         which could be another reason for lines deviating from the expected 10 vowels.
         In the Michaëlis poem quoted above it is 10.4.</p>
@@ -811,7 +811,7 @@ p.version {
       2018.
       Italian or Petrarchan Sonnet. In: <em>Every Sonnet: The sonnet forms database</em>. <a href="https://poetscollective.org/everysonnet/tag/abbaabbacdecde/#post-119">https://poetscollective.org/everysonnet/tag/abbaabbacdecde/#post-119</a>
       </p>
-      <p id="hendecasyllable"> Hendecasyllable. In: <em>Wikipedia</em>. <a href="https://en.wikipedia.org/wiki/Hendecasyllable">https://en.wikipedia.org/wiki/Hendecasyllable</a>
+      <p id="hendecasyllabic"> Hendecasyllable. In: <em>Wikipedia</em>. <a href="https://en.wikipedia.org/wiki/Hendecasyllable">https://en.wikipedia.org/wiki/Hendecasyllable</a>
       </p>
       <p id="pentameter"> Iambic pentameter. In: <em>Wikipedia</em>. <a href="https://en.wikipedia.org/wiki/Iambic_pentameter">https://en.wikipedia.org/wiki/Iambic_pentameter</a>
       </p>
